Egress - Gateways with TLS origination /gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yahoo-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - name: httpbin
    port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - finance.yahoo.com
