Egress - Gateways with TLS origination /vs-ssl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-httbin-through-egress-gateway
spec:
  hosts:
  - httpbin.org
  gateways:
  - httpbin-egressgateway
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      sniHosts:
      - httpbin.org
      port: 443
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - httpbin-egressgateway
      sniHosts:
      - httpbin.org
      port: 443
    route:
    - destination:
        host: httpbin.org
        port:
          number: 443
